# examples

./: .gitignore  README.md  defra-and-mongo-client-server.js  defra-kv.go
http/rust/: Cargo.toml  README.md
http/rust/src/: backup_operations.rs  collection_operations.rs  graphql_operations.rs  openapi.json  p2p_networking.rs  schema_management.rs
rag/: README.md  go.mod  go.sum  main.go  wiki.jsonl
web/: defradb.html  index.html  mongodb.html
