[package]
name = "defradb-http"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "schema_management"
path = "src/schema_management.rs"

[[bin]]
name = "collection_operations"
path = "src/collection_operations.rs"

[[bin]]
name = "graphql_operations"
path = "src/graphql_operations.rs"

[[bin]]
name = "p2p_networking"
path = "src/p2p_networking.rs"

[[bin]]
name = "backup_operations"
path = "src/backup_operations.rs"

[[bin]]
name = "indexing_operations"
path = "src/indexing_operations.rs"

[[bin]]
name = "transaction_management"
path = "src/transaction_management.rs"

[[bin]]
name = "access_control"
path = "src/access_control.rs"
